--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <button type="button" class="btn btn-light btn-lg download-button"><i class="icon fab fa-google-play"></i>Download</button>
     </div>
     <div class="col-lg-6">
-      <img class="title-image" src="images/EDU LEARN.png" alt="iphone-mockup">
+      <img class="title-image" src="EDU LEARN.png" alt="iphone-mockup">
     </div>
     </div>
     </div>
@@ -89,22 +89,22 @@
              <div class="carousel-inner">
                 <div class="carousel-item active">
                   <h2>CLOUD COMPUTING</h2>
-                  <img class="testimonial-image" src="images/aws_logo_smile_1200x630.png" alt="aws">
+                  <img class="testimonial-image" src="aws_logo_smile_1200x630.png" alt="aws">
                    <!-- <em>Amazon Web Services</em> -->
                 </div>             
               <div class="carousel-item">
                 <h2 class="testimonial-text">MERN STACK</h2>
-                <img class="testimonial-image" src="images/0_GKIyAWHbKbANm7d9.jpg" alt="mern stack">
+                <img class="testimonial-image" src="0_GKIyAWHbKbANm7d9.jpg" alt="mern stack">
                 <!-- <em>Beverly, Illinois</em> -->
               </div>
               <div class="carousel-item">
                 <h2 class="testimonial-text">FLUTTER</h2>
-                <img class="testimonial-image" src="images/download.png" alt="mern stack">
+                <img class="testimonial-image" src="download.png" alt="mern stack">
                 <!-- <em>Beverly, Illinois</em> -->
               </div>
               <div class="carousel-item">
                 <h2 class="testimonial-text">Data Science</h2>
-                <img class="testimonial-image" src="images/download.jpg" alt="Data Science">
+                <img class="testimonial-image" src="download.jpg" alt="Data Science">
                 <!-- <em>Beverly, Illinois</em> -->
               </div>
             </div>
@@ -125,9 +125,9 @@
 
   <section id="press">
     <h3 class="h33">Mentors from </h3>
-    <img class="press-image" src="images/google.png" alt="google-logo">
-    <img class="press-image" src="images/microsoft.png" alt="microsoft-logo">
-    <img class="press-image" src="images/amazon.png" alt="amazon-logo">
+    <img class="press-image" src="google.png" alt="google-logo">
+    <img class="press-image" src="microsoft.png" alt="microsoft-logo">
+    <img class="press-image" src="amazon.png" alt="amazon-logo">
 
   </section>
 
