--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div align="center" class="icons1">
     <ul class="s-ul">
         <li class="s-li tweet">
-          <a class="s-a" href="https://twitter.com/harshit31988401?t=ZdEFbfUvUB8ZqQBkm0a2Xw&s=08" target="_blank"><i class="fab fa-twitter icon"></i></a></li>
+          <a class="s-a" href="https://twitter.com/Revanth68046311" target="_blank"><i class="fab fa-twitter icon"></i></a></li>
         <li class="s-li linked-in">
           <a class="s-a" href="https://www.linkedin.com/in/revanth-mummidi-a14a98254/" target="_blank"><i class="fab fa-linkedin-in icon"></i></a>
         </li>        
